@@ -1,6 +1,7 @@
 2016-03-25  Andy Buckley  <andy.buckley@cern.ch>
 
-	* Propagate identity and C++ dialect flags from Rivet to rivet-config.
+	* Propagate identity and C++ dialect flags from Rivet to
+	rivet-config and rivet-buildplugin.
 
 	* Require C++11 support in Rivet compilation.
 
